refactor: replace String Templates with formatted() method in LLMModel